Bugfix for message content, now wrapping words

--- a/live_chat_service/src/app/components/chat/chat.component.css
+++ b/live_chat_service/src/app/components/chat/chat.component.css
@@ -14,7 +14,7 @@
   width: 90%;
   max-width: 1000px;
   height: 1000px;
-  padding: 20px;
+  padding: 50px;
   box-shadow: 2px 2px 10px white;
   border-radius: 15px;
   background-color: #34495E;
@@ -71,6 +71,7 @@
 
 .message-content {
   font-size: 20px;
+  overflow-wrap: break-word;
 }
 
 form {
